[ui] fix text editor field overflow

--- a/frappe/public/less/form_grid.less
+++ b/frappe/public/less/form_grid.less
@@ -85,7 +85,7 @@
 	.col {
 		padding-left: 10px;
 		padding-right: 10px;
-		overflow: hidden;
+		// overflow: hidden;
 	}
 }
 
@@ -157,6 +157,10 @@
 				border: none;
 			}
 		}
+	}
+
+	.grid-static-col[data-fieldtype="Text Editor"] {
+		overflow: hidden;
 	}
 
 }
